Bug 1994855 - Remove assert that doesn't hold. r=win-reviewers,handyman

This spike probably comes from bug 1933181, but that assert is wrong
afaict. It's not flushing and we're now creating the widget a bit later,
so there might be a popupframe without a widget more often.

Looking at the commit that introduced these, it wasn't clear these
asserts were correct to begin with.

  https://hg-edge.mozilla.org/mozilla-central/rev/5823cb0f699866c8672cce50cf8e1cbceadc43aa

I think the assert below (every widget hanging from a popup having an
hwnd) should hold.

Differential Revision: https://phabricator.services.mozilla.com/D268958